# zfp-torch

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  docker-compose.yaml  readme.md  setup.py
custom/: main.cpp  zfp_compresser.cpp  zfp_compresser.hpp
custom/include/: zfp_compresser.hpp
custom/lib/: CMakeLists.txt  zfp_compresser.cpp
test/: test-1d.py  test-parallel.py  test-tokenwise.py
zfp_torch/: ParallelTensorCompression.pyi  PseudoTensorCompression.pyi  TensorCompression.pyi  __init__.pyi
zfp_torch/include/: compress.hpp  metadata.hpp  zfp_compresser.hpp
zfp_torch/include/compress/: base.hpp  parallel.hpp  pseudo.hpp  tensor.hpp
zfp_torch/include/utils/: general.hpp  logger.hpp  types.hpp  zfp.hpp
zfp_torch/lib/: CMakeLists.txt  compress.cpp  metadata.cpp  torch_extension.cpp  zfp_compresser.cpp
zfp_torch/lib/compress/: base.cpp  parallel.cpp  pseudo.cpp  tensor.cpp
zfp_torch/lib/utils/: types.cpp
zfp_torch/src/: CMakeLists.txt  main.cpp
